# CameraLidarCalibrator

./: CMakeLists.txt  LICENSE  README.md  buildThirdparty.sh  package.xml  prepareExemplaryData.sh
examples/rosbag/: CameraLaserCalibrationBAG.cpp  CameraLaserCalibrationBAG.h  calibrate_rosbag.cpp
examples/simulation/: CameraLaserCalibrationSIM.cpp  CameraLaserCalibrationSIM.h  calibrate_simulation.cpp
include/: CameraLaserCalibration.h  Optimization.h
include/detections/: CameraDetection.h  LaserDetection.h
include/local_g2o/: LieAlgebra.h  edge_one_prior.h  edge_se3_time.h  minimal_plane.h  register_types.h  vertex_one.h
include/utils/: BSpline.h  CustomVoxelGrid.h  colormap.h
launch/: run_rosbag_velo.launch  run_sim.launch
src/: CameraLaserCalibration.cpp  Optimization.cpp
src/detections/: CameraDetection.cpp  LaserDetection.cpp
src/local_g2o/: edge_one_prior.cpp  edge_se3_time.cpp  minimal_plane.cpp  register_types.cpp  vertex_one.cpp
src/utils/: BSpline.cpp  CustomVoxelGrid.cpp
